# forecastkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/forecastkit/: auto_ts.py  forecastkit-old.py  holt_winters_forecast.py  plot_forecast.py  prophet_forecast.py
tests/: test_forecastkit.py
